# luukhopman.nl

./: .gitignore  AGENTS.md  README.md  database.py  deploy.sh  main.py  products.db  pyproject.toml
.github/: AGENTS.md
.github/scripts/: deploy-vps.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2e2c8a1d4f11_add_todos_table.py  5fce83e28ada_add_acquired_at_and_deleted_at.py  8a7d2d7f5f8b_add_recipe_course_and_backfill_notes.py  9b7d1e4a6c2f_add_resource_versions_table.py  c3a1f9b2d6e4_drop_recipe_description_column.py  f4c6e8a1b2d3_merge_todo_and_cookbook_heads.py
app/: auth.py  config.py  database.py  main.py
app/features/cookbook/: models.py  parsing.py  routes.py  schemas.py  text.py
app/features/todo/: models.py  routes.py
app/routers/: auth.py  realtime.py  site.py
app/services/: cleanup.py  realtime.py
app/static/: index.html  landing.css  login.html  main.js  theme.css
app/static/todo/: index.html  (+2 more)
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.deploy.json  tsconfig.json  tsconfig.typecheck.json  vitest.config.mts
frontend/app/: globals.css  layout.tsx  manifest.ts
frontend/components/: app-footer-nav.tsx  autocomplete-input.tsx  confirm-dialog.tsx
frontend/lib/: browser.ts  cookbook.ts  favicons.tsx  format.ts  http.ts  metadata.ts  types.ts  wishlist.ts
frontend/scripts/: migrate.ts  prepare-next-dir.mjs
frontend/styles/: cookbook.css  garden-planner.css  gifts.css  landing.css  todo.css  wishlist.css
scripts/: deploy-production.sh
static/: app.js  index.html  styles.css  theme.css
(+82 files in other folders)
